--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.sass",
-              "../node_modules/material-design-icons/iconfont/material-icons.css"
+              "src/styles.sass"
             ],
             "scripts": []
           },
